test/classes/bradc/syncAsClass3.good
syncAsClass3.chpl:5: error: Cannot assign to object from sync int(64)
