test/classes/bradc/syncAsClass3.chpl
var myObject: borrowed object?;

var mysync: sync int;

myObject = mysync;
